name: hslua
version: 0.4.6
stability: beta
cabal-version: >= 1.6
license: BSD3
build-type: Simple
license-file: COPYRIGHT
copyright: 2007-2010, Gracjan Polak
author: Gracjan Polak <gracjanpolak@gmail.com>, Mike Ledger <eleventynine@gmail.com>
maintainer: Gracjan Polak <gracjanpolak@gmail.com>
synopsis: A Lua language interpreter embedding in Haskell
description:
        The Scripting.Lua module is a wrapper of Lua language interpreter
        as described in www.lua.org.
category: Scripting

library
  build-depends: base==4.*, bytestring, text
  exposed-modules: Scripting.Lua, Scripting.Lua.ConfigFile
  hs-source-dirs: src
  extra-libraries: lua

  if os(linux)
    cc-options: "-DLUA_USE_LINUX"

  if os(darwin)
    cc-options: "-DLUA_USE_MACOSX"

  if os(freebsd)
    cc-options: "-DLUA_USE_POSIX"

