name: hslua
version: 0.4.7
stability: beta
cabal-version: >= 1.6
license: BSD3
build-type: Simple
license-file: COPYRIGHT
copyright: 2007-2010, Gracjan Polak
author: Gracjan Polak <gracjanpolak@gmail.com>, Mike Ledger <eleventynine@gmail.com>
maintainer: Gracjan Polak <gracjanpolak@gmail.com>
synopsis: Bindings to the Lua C API.
description: Haskell bindings for Lua.
category: Scripting

flag system-lua
    description: Use the system Lua, instead of the one that comes with HsLua.
    default: False

library
    build-depends: base==4.*, bytestring, text
    exposed-modules: Lua, Lua.ConfigFile
    hs-source-dirs: src

    if flag(system-lua)
        extra-libraries: lua
    else
        include-dirs: lua
        c-sources: 
              lapi.c
            , lauxlib.c
            , lbaselib.c
            , lcode.c
            , ldblib.c
            , ldebug.c
            , ldo.c
            , ldump.c
            , lfunc.c
            , lgc.c
            , linit.c
            , liolib.c
            , llex.c
            , lmathlib.c
            , lmem.c
            , loadlib.c
            , lobject.c
            , lopcodes.c
            , loslib.c
            , lparser.c
            , lstate.c
            , lstring.c
            , lstrlib.c
            , ltable.c
            , ltablib.c
            , ltm.c
            , lundump.c
            , lvm.c
            , lzio.c
            , ntrljmp.c

    if os(linux)
        cc-options: "-DLUA_USE_LINUX"

    if os(darwin)
        cc-options: "-DLUA_USE_MACOSX"

    if os(freebsd)
        cc-options: "-DLUA_USE_POSIX"

