name: hslua
version: 0.5.2
stability: beta
cabal-version: >= 1.6
license: BSD3
build-type: Simple
license-file: COPYRIGHT
copyright: 2007-2010, Gracjan Polak
author: Gracjan Polak <gracjanpolak@gmail.com>, Mike Ledger <eleventynine@gmail.com>
maintainer: Gracjan Polak <gracjanpolak@gmail.com>
synopsis: Bindings to the Lua C API.
description: Haskell bindings for Lua.
category: Scripting

flag system-lua
    description: Use the system Lua, instead of the one that comes with HsLua.
    default: False

library
    build-depends: base==4.*, bytestring, text
    exposed-modules: Lua, Lua.Types, Lua.ConfigFile
    hs-source-dirs: src

    if flag(system-lua)
        extra-libraries: lua
    else
        c-sources: lua/lapi.c
                 , lua/lauxlib.c
                 , lua/lbaselib.c
                 , lua/lcode.c
                 , lua/ldblib.c
                 , lua/ldebug.c
                 , lua/ldo.c
                 , lua/ldump.c
                 , lua/lfunc.c
                 , lua/lgc.c
                 , lua/linit.c
                 , lua/liolib.c
                 , lua/llex.c
                 , lua/lmathlib.c
                 , lua/lmem.c
                 , lua/loadlib.c
                 , lua/lobject.c
                 , lua/lopcodes.c
                 , lua/loslib.c
                 , lua/lparser.c
                 , lua/lstate.c
                 , lua/lstring.c
                 , lua/lstrlib.c
                 , lua/ltable.c
                 , lua/ltablib.c
                 , lua/ltm.c
                 , lua/lundump.c
                 , lua/lvm.c
                 , lua/lzio.c
                 , lua/ntrljmp.c

    if os(linux)
        cc-options: "-DLUA_USE_LINUX"

    if os(darwin)
        cc-options: "-DLUA_USE_MACOSX"

    if os(freebsd)
        cc-options: "-DLUA_USE_POSIX"

